tests/e2e/null_operation.error
Error: syntax error in story at line 1, column 5

1|    a = 1 + null
          ^^^^^^^^

E0103: `+` between `int` and `null` is not supported.
